--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       </section>
     </div>
   </main>
-  <footer class="mt-40 relative">
+  <footer class="mt-40 relative bg-primary-GrayLight pt-10">
     <picture class="-z-10 absolute left-0 top-0">
       <source media="(max-width: 799px)" srcset="./images/bg-pattern-footer-mobile.svg" />
       <source media="(min-width: 800px)" srcset="./images/bg-pattern-footer-desktop.svg "/>
